--- a/index.html
+++ b/index.html
@@ -470,46 +470,132 @@
             </ul>
           </div>
         </div>
+
+        <div class="footer-sub-input">
+          <form>
+            <h4 class="join">Подпишитесь на рассылку</h4>
+            <div class="footer-field">
+              <label class="footer-input-lable" for="e-mail"></label>
+              <input
+                type="text"
+                class="footer-input"
+                name="e-mail"
+                placeholder="E-mail"
+                required
+                minlength="5"
+                title=""
+                id="E-mail"
+              />
+              <div class="footer-btn">
+                <button type="submit" class="btn footer-btn-icon">
+                  Подписаться
+                </button>
+                <div>
+                  <svg class="btn-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-send"></use>
+                  </svg>
+                </div>
+              </div>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
 
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="btn-close" data-modal-close>
           <svg width="11" height="11">
-            <use href="./images/icons.svg#icon-Close"></use>
+            <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
         <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
         <form class="modal-form">
-          <input
-            type="text"
-            class="modal-input"
-            name="user-name"
-            placeholder="Имя"
-            required
-            minlength="2"
-            title="Фамилия Имя"
-          />
-          <input
-            type="tel"
-            class="modal-input"
-            name="user-tel"
-            placeholder="Телефон"
-            required
-            minlength="10"
-            title="+38 (050)11-11-111"
-          />
-          <input
-            type="mail"
-            class="modal-input"
-            name="user-tel"
-            placeholder="Почта"
-            required
-            minlength="5"
-            title="name@mail.com"
-          />
-          <button type="submit" class="btn">Отправить</button>
+          <div class="modal-field">
+            <label class="modal-lable" for="user-name">Имя</label>
+            <div class="modal-input-svg">
+              <input
+                type="text"
+                class="modal-input"
+                name="user-name"
+                placeholder=""
+                required
+                minlength="2"
+                title="Фамилия Имя"
+                id="user-name"
+                autofocus="on"
+              />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-name"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label class="modal-lable" for="user-phone">Телефон</label>
+            <div class="modal-input-svg">
+              <input
+                type="tel"
+                class="modal-input"
+                name="user-phone"
+                placeholder=""
+                required
+                minlength="10"
+                title="+38 050 11 11 111"
+                id="user-phone"
+              />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label class="modal-lable" for="user-mail">Почта</label>
+            <div class="modal-input-svg">
+              <input
+                type="mail"
+                class="modal-input"
+                name="user-tel"
+                placeholder=""
+                required
+                minlength="5"
+                title="name@mail.com"
+                id="user-mail"
+              />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-field textarea">
+            <label class="modal-lable" for="modal-area">Коментарий</label>
+            <textarea
+              class="modal-area"
+              name="user-text"
+              placeholder="Введите текст"
+              id="modal-area"
+            ></textarea>
+          </div>
+
+          <div class="modal-field">
+            <label class="check-text">
+              <input
+                type="checkbox"
+                class="input-check"
+                name="policy"
+                value="policy"
+              />
+
+              <svg class="checkbox-svg" width="11" height="8">
+                <use href="./images/icons.svg#icon-check"></use></svg
+              >Соглашаюсь с рассылкой и принимаю &nbsp;<a
+                href=""
+                class="modal-link"
+                >Условия договора</a
+              >
+            </label>
+          </div>
+          <button type="submit" class="btn btn-send">Отправить</button>
         </form>
       </div>
     </div>
