вносит правки в портфолио

--- a/index.html
+++ b/index.html
@@ -485,6 +485,7 @@
                 minlength="5"
                 title=""
                 id="E-mail"
+                autocomplete="off"
               />
               <div class="footer-btn">
                 <button type="submit" class="btn footer-btn-icon">
@@ -518,7 +519,7 @@
                 type="text"
                 class="modal-input"
                 name="user-name"
-                placeholder=""
+                placeholder=" "
                 required
                 minlength="2"
                 title="Фамилия Имя"
@@ -537,7 +538,7 @@
                 type="tel"
                 class="modal-input"
                 name="user-phone"
-                placeholder=""
+                placeholder=" "
                 required
                 minlength="10"
                 title="+38 050 11 11 111"
@@ -554,12 +555,13 @@
               <input
                 type="mail"
                 class="modal-input"
-                name="user-tel"
-                placeholder=""
+                name="user-mail"
+                placeholder=" "
                 required
                 minlength="5"
                 title="name@mail.com"
                 id="user-mail"
+                autocomplete="off"
               />
               <svg class="modal-icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-email"></use>
