--- a/portfolio.html
+++ b/portfolio.html
@@ -346,6 +346,36 @@
             </ul>
           </div>
         </div>
+
+        <div class="footer-sub-input">
+          <form>
+            <h4 class="join">Подпишитесь на рассылку</h4>
+            <div class="footer-field">
+              <label class="footer-input-lable" for="e-mail"></label>
+              <input
+                type="text"
+                class="footer-input"
+                name="e-mail"
+                placeholder="E-mail"
+                required
+                minlength="5"
+                title=""
+                id="E-mail"
+                autocomplete="off"
+              />
+              <div class="footer-btn">
+                <button type="submit" class="btn footer-btn-icon">
+                  Подписаться
+                </button>
+                <div>
+                  <svg class="btn-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-send"></use>
+                  </svg>
+                </div>
+              </div>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
