--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
 
         <div class="footer-sub-input">
           <form>
-            <h4 class="join">Подпишитесь на рассылку</h4>
+            <p class="join">Подпишитесь на рассылку</p>
             <div class="footer-field">
               <label class="footer-input-lable" for="e-mail"></label>
               <input
@@ -487,16 +487,12 @@
                 id="E-mail"
                 autocomplete="off"
               />
-              <div class="footer-btn">
-                <button type="submit" class="btn footer-btn-icon">
-                  Подписаться
-                </button>
-                <div>
-                  <svg class="btn-icon" width="24" height="24">
-                    <use href="./images/icons.svg#icon-send"></use>
-                  </svg>
-                </div>
-              </div>
+              <button type="submit" class="btn footer-btn-icon">
+                Подписаться
+                <svg class="btn-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </button>
             </div>
           </form>
         </div>
@@ -579,7 +575,7 @@
             ></textarea>
           </div>
 
-          <div class="modal-field">
+          <div class="modal-field checkbox">
             <label class="check-text">
               <input
                 type="checkbox"
